# kxstitch

./: .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Doxyfile.in  Messages.sh  XmlMessages.sh  build-debug.sh  build.sh  configuration.kcfgc  kxstitch.desktop  kxstitch.kcfg  kxstitch.qrc  kxstitch.xml  kxstitchui.rc  org.kde.kxstitch.appdata.xml  org.kde.kxstitch.desktop  snapcraft.yaml
doc/: CMakeLists.txt  commands.docbook  credits.docbook  dialogs.docbook  features.docbook  index.docbook  install.docbook  introduction.docbook  man-kxstitch.1.docbook  patterns.docbook  ui.docbook
doc/en/: CMakeLists.txt  commands.docbook  credits.docbook  dialogs.docbook  faq.docbook  features.docbook  index.docbook  introduction.docbook  patterns.docbook  printing.docbook  ui.docbook
icons/: CMakeLists.txt
icons/app/: CMakeLists.txt  sc-apps-kxstitch.svgz  sc-mimetypes-application-x-kxs.svgz
po/: CMakeLists.txt  ca.po  cs.po  cs_CZ.po  en_GB.po  es.po  fr.po  it.po
po/ar/: kxstitch.po
po/ast/: kxstitch.po
po/bs/: kxstitch.po
po/ca/: kxstitch.po
po/ca/docs/kxstitch/: commands.docbook  credits.docbook  dialogs.docbook  features.docbook  index.docbook  install.docbook  introduction.docbook  man-kxstitch.1.docbook  patterns.docbook  printing.docbook  ui.docbook
po/ca@valencia/: kxstitch.po
po/cs/: kxstitch.po
po/da/: kxstitch.po
po/de/: kxstitch.po
po/de/docs/kxstitch/: credits.docbook  faq.docbook  install.docbook  introduction.docbook  man-kxstitch.1.docbook  printing.docbook  ui.docbook
po/en_GB/: kxstitch.po
po/eo/: kxstitch.po
po/es/: kxstitch.po
po/es/docs/kxstitch/: credits.docbook  faq.docbook  install.docbook  introduction.docbook  man-kxstitch.1.docbook  printing.docbook
po/et/: kxstitch.po
po/et/docs/kxstitch/: commands.docbook  credits.docbook  dialogs.docbook  faq.docbook  features.docbook  index.docbook  install.docbook  introduction.docbook  man-kxstitch.1.docbook  patterns.docbook  printing.docbook  ui.docbook
po/eu/: kxstitch.po
po/fi/: kxstitch.po
po/fr/: kxstitch.po
po/ga/: kxstitch.po
po/gl/: kxstitch.po
po/he/: kxstitch.po
po/hi/: kxstitch.po
po/hu/: kxstitch.po
po/ia/: kxstitch.po
po/it/: kxstitch.po
po/it/docs/kxstitch/: commands.docbook  credits.docbook  dialogs.docbook  features.docbook  index.docbook  install.docbook  introduction.docbook  man-kxstitch.1.docbook  patterns.docbook  printing.docbook  ui.docbook
po/ja/: kxstitch.po
po/ka/: kxstitch.po
po/lt/: kxstitch.po
po/nl/: kxstitch.po
po/nl/docs/kxstitch/: commands.docbook  credits.docbook  dialogs.docbook  faq.docbook  features.docbook  index.docbook  install.docbook  introduction.docbook  man-kxstitch.1.docbook  patterns.docbook  printing.docbook  ui.docbook
po/nn/: kxstitch.po
po/pl/: kxstitch.po
po/pt/: kxstitch.po
po/pt/docs/kxstitch/: commands.docbook  credits.docbook  dialogs.docbook  faq.docbook  features.docbook  index.docbook  install.docbook  introduction.docbook  man-kxstitch.1.docbook  patterns.docbook  printing.docbook  ui.docbook
po/pt_BR/: kxstitch.po
po/pt_BR/docs/kxstitch/: commands.docbook  credits.docbook  dialogs.docbook  faq.docbook  features.docbook  index.docbook  install.docbook  introduction.docbook  man-kxstitch.1.docbook  patterns.docbook  printing.docbook  ui.docbook
po/ru/: kxstitch.po
po/sa/: kxstitch.po
po/sk/: kxstitch.po
po/sl/: kxstitch.po
po/sl/docs/kxstitch/: commands.docbook  credits.docbook  dialogs.docbook  features.docbook  install.docbook  introduction.docbook  man-kxstitch.1.docbook  patterns.docbook  printing.docbook  ui.docbook
po/sv/: kxstitch.po
po/sv/docs/kxstitch/: commands.docbook  credits.docbook  dialogs.docbook  faq.docbook  features.docbook  index.docbook  install.docbook  introduction.docbook  man-kxstitch.1.docbook  patterns.docbook  printing.docbook  ui.docbook
po/tr/: kxstitch.po
po/uk/: kxstitch.po
po/uk/docs/kxstitch/: commands.docbook  credits.docbook  dialogs.docbook  features.docbook  index.docbook  install.docbook  introduction.docbook  man-kxstitch.1.docbook  patterns.docbook  printing.docbook  ui.docbook
po/zh_CN/: kxstitch.po
po/zh_TW/: kxstitch.po
schemes/: CMakeLists.txt  anchor.xml  dmc.xml  jp_coates.xml  madeira.xml
src/: AlphaSelect.cpp  AlphaSelect.h  BackgroundImage.cpp  BackgroundImage.h  BackgroundImages.cpp  BackgroundImages.h  Boundary.cpp  Boundary.h  CalibrateFlossDlg.cpp  CalibrateFlossDlg.h  CharSelectorDlg.cpp  CharSelectorDlg.h  Commands.cpp  Commands.h  ConfigurationDialogs.cpp  ConfigurationDialogs.h  Document.cpp  Document.h  DocumentFloss.cpp  DocumentFloss.h  DocumentPalette.cpp  DocumentPalette.h  Editor.cpp  Editor.h  Element.cpp  Element.h  Exceptions.cpp  Exceptions.h  ExtendPatternDlg.cpp  ExtendPatternDlg.h  FilePropertiesDlg.cpp  FilePropertiesDlg.h  Floss.cpp  Floss.h  FlossScheme.cpp  FlossScheme.h  ImageElementDlg.cpp  ImageElementDlg.h  ImportImageDlg.cpp  ImportImageDlg.h  (+134 more)
symbols/: CMakeLists.txt  kxstitch.sym  letters.sym
ui/: Appearance.ui  CalibrateFloss.ui  CharSelector.ui  Colors.ui  EditorConfigPage.ui  ExtendPattern.ui  FileProperties.ui  General.ui  ImageElement.ui  ImportConfigPage.ui  ImportImage.ui  KeyElement.ui  LibraryConfigPage.ui  LibraryFilePaths.ui  LibraryManager.ui  LibraryPatternProperties.ui  NewFloss.ui  PageProperties.ui  PaletteConfigPage.ui  PaletteManager.ui  PatternConfigPage.ui  PatternElement.ui  PrintSetup.ui  PrinterConfigPage.ui  SymbolSelector.ui  TextElement.ui  TextTool.ui  characterselectdlg.ui  fonts.ui  newflossdlg.ui  patternproperties.ui
